[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "resilience-lib"
version = "1.0.0"
description = "resilty.io lib, that is responsible for running the resilience tests"
authors = ["Swaroop Shubhakrishna Bhat <swaroopbhatk@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "reslib", from = "src" }]
keywords = [
    "resilience",
    "resiliency",
    "resiliency-posture",
    "kubernetes",
    "sre",
    "reliability",
    "observability",
    "opentelemetry",
    "devops",
    "platform-engineering"
]

[tool.poetry.dependencies]
python = "^3.12"
python-json-logger = "^4.0.0"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
kubernetes = "^34.1.0"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["agent"]
combine_as_imports = true
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "B"]

[tool.coverage.run]
source = ["agent"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.poetry.urls]
homepage = "https://github.com/resiltyio/resilience-lib"
documentation = "https://github.com/resiltyio/resilience-lib/tree/main/docs"
bug-tracker = "https://github.com/resiltyio/resilience-lib/issues"
