[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "resilience-lib"
version = "1.0.0"
description = "resilopshq.com lib, that is responsible for running the resilience tests"
authors = ["Swaroop Shubhakrishna Bhat <swaroopbhatk@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "reslib", from = "src" }]
keywords = [
    "resilience",
    "resiliency",
    "resiliency-posture",
    "kubernetes",
    "sre",
    "reliability",
    "observability",
    "opentelemetry",
    "devops",
    "platform-engineering"
]

[tool.poetry.dependencies]
python = "^3.12"
python-json-logger = "^4.1.0"
kubernetes = "^36.0.2"
pydantic = "^2.13.4"
pydantic-settings = "^2.14.2"
aiohttp = "^3.14.1"
httpx = "^0.28.1"
cachetools = "^7.1.4"

[tool.poetry.group.test.dependencies]
pytest = "^9.1.1"
pytest-asyncio = "^1.4.0"
pytest-cov = "^7.1.0"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["agent"]
combine_as_imports = true
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "B"]

[tool.coverage.run]
source = ["reslib"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/reslib"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
norecursedirs = ["__pycache__"]
addopts = "--cov=reslib.config --cov=reslib.constants --cov=reslib.exceptions --cov=reslib.helpers --cov=reslib.logging --cov=reslib.actions.schemas --cov=reslib.core.context --cov=reslib.core.watchdog --cov=reslib.guardrails.availability --cov=reslib.k8s.client --cov=reslib.k8s.exceptions --cov=reslib.k8s.schema --cov=reslib.observers.http --cov=reslib.observers.schemas --cov=reslib.rollbacks.schemas --cov=reslib.runtime.resolve --cov=reslib.schemas.scenario --cov=reslib.schemas.validators --cov-report=term-missing --cov-fail-under=80"


[tool.poetry.urls]
homepage = "https://github.com/resilops/resilience-lib"
documentation = "https://github.com/resilops/resilience-lib/tree/main/docs"
bug-tracker = "https://github.com/resilops/resilience-lib/issues"
